Fix burger menu affecting spacing.

--- a/Stylesheets/Common/navigation.css
+++ b/Stylesheets/Common/navigation.css
@@ -106,7 +106,9 @@
 /*NAVBAR BURGER MENU CONTENTS*/
 .navigationBarBurgerMenu {
     z-index: 99;
-    position: relative;
+    position: absolute;
+
+    width: 100%;
 
     background-color: #412d40;
 
